--- a/admin/templates/history.html
+++ b/admin/templates/history.html
@@ -8,25 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <aside class="sidebar">
-            <div class="admin-profile">
-                <div class="profile-image">
-                    <img src="/static/image/admin-profil.jpg" alt="Admin Profile Picture">
-                </div>
-                <h2>{{ victim.username }}</h2>
-            </div>
-            <nav class="sidebar-nav">
-                <a class="nav-item" href="/overview?id={{ victim.id }}">Overview</a>
-                <a class="nav-item active" href="/history?id={{ victim.id }}">History</a>
-                <a class="nav-item" href="/passcookies?id={{ victim.id }}">Pass Cookies</a>
-            </nav>
-            <div class="logout-section">
-                <a href="/victim" class="logout-btn">
-                    <img src="/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
-                    Back
-                </a>
-            </div>
-        </aside>
+      {% include '_sidebar.html' %}   <!-- atau bisa ditempel manual -->
 
         <main class="history">
             <div class="history-header">
